# longbridge-mcp

./: .gitignore  Cargo.toml  Dockerfile  LAUNCHGUIDE.md  README.md  glama.json  server.json
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-04-16-mcp-tool-quality.md
src/: main.rs
src/auth/: metadata.rs  mod.rs
src/serialize/: counter_id.rs  mod.rs  timestamp.rs  transform.rs
src/tools/: alert.rs  calendar.rs  content.rs  dca.rs  fundamental.rs  http_client.rs  market.rs  mod.rs  portfolio.rs  quant.rs  quote.rs  sharelist.rs  statement.rs  tolerant.rs  trade.rs
