[package]
name = "longbridge-mcp"
version = "0.1.7"
edition = "2024"

[dependencies]
longbridge = { git = "https://github.com/longbridge/openapi.git" }
rmcp = { version = "1.4", features = [
    "server",
    "transport-streamable-http-server",
    "macros",
] }
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
    "signal",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
time = { version = "0.3", features = ["formatting", "parsing"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
prometheus = "0.13"
thiserror = "2"
axum-server = { version = "0.7", features = ["tls-rustls"] }
serde-transcode = "1.1"
anyhow = "1"
rustls = { version = "0.23", features = ["ring"] }
